--- a/index.html
+++ b/index.html
@@ -110,24 +110,24 @@
             <h1 class="theme-title animate__animated  animate__tada animate__repeat-1 display-1">寶可夢色票</h1>
         </div>
         <figure class="main-pic mx-auto">
-            <img src="../images/1.png" alt="妙娃種子">
+            <img src="./images/1.png" alt="妙娃種子">
         </figure>
 
         <div class="tumb d-flex  justify-content-center">
             <div class="pic ratio ratio-1x1 mx-2">
-                <img class="obj-fit-cover" data-color="#62d5b4" src="../images/1.png" alt="">
+                <img class="obj-fit-cover" data-color="#62d5b4" src="./images/1.png" alt="">
             </div>
             <div class="pic ratio ratio-1x1 mx-2">
-                <img class="obj-fit-cover" data-color="#de5239" src="../images/4.png" alt="">
+                <img class="obj-fit-cover" data-color="#de5239" src="./images/4.png" alt="">
             </div>
             <div class="pic ratio ratio-1x1 mx-2">
-                <img class="obj-fit-cover" data-color="#8bc5cd" src="../images/7.png" alt="">
+                <img class="obj-fit-cover" data-color="#8bc5cd" src="./images/7.png" alt="">
             </div>
             <div class="pic ratio ratio-1x1 mx-2">
-                <img class="obj-fit-cover" data-color="#f6bd20" src="../images/25.png" alt="">
+                <img class="obj-fit-cover" data-color="#f6bd20" src="./images/25.png" alt="">
             </div>
             <div class="pic ratio ratio-1x1 mx-2">
-                <img class="obj-fit-cover" data-color="#5a4a9c" src="../images/94.png" alt="">
+                <img class="obj-fit-cover" data-color="#5a4a9c" src="./images/94.png" alt="">
             </div>
         </div>
         <div class="color-chart text-center mt-5">
