--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             width: 340px;
             height: 340px;
             border: 1px solid #333;
-            border-radius: 50%;
+            border-radius: 20px;
             /* filter: drop-shadow(5px 5px 5px blue); */
             overflow: hidden;
 
@@ -228,7 +228,7 @@
     </div>
     <!-- pokemonball -->
     <figure class="mouseBall" id="mouseBall">
-        <img class="obj-fit-cover" src="/images/pokeball-normal.png" alt="">
+        <img class="obj-fit-cover" src="./images/pokeball-normal.png" alt="">
     </figure>
     <script>
         /* 需求： 製作點擊之後切換照片的效果 */
